Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104450

qmake: it's impossible to configure some compiler and linker options in the generated vcxproj

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.15.2
    • Build tools: qmake
    • None
    • Windows

    Description

      My complaint is specifically about MSBuild project generation (vcxproj). The attached qmake project demonstrates issues #1 and #2.

      1. Impossible to set /LTCG:INCREMENTAL, instead you get /LTCG
      2. Impossible to set /DEBUG:FULL, instead you get /DEBUG
      At the same time, options like /OPT:REF and /DEBUG:FASTLINK do work, so it's not a problem of processing options with semicilons. I assume qmake simply parses these particular linker options incorrectly.

      3. Impossible to get rid of the /FC flag. For me it's just a cosmetic issue of log files being cluttered with unnecessary full paths, but more importantly, this option makes builds non-reproducible (since your binary depends on which folder the project was built from).
      Detailed and simple to understand description of the problem with /FC and how to get rid of it here - CMake had the same issue and they fixed it: https://gitlab.kitware.com/cmake/cmake/-/issues/18261

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            alexium Alex
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: