qmake/generators/win32/msbuild_objectmodel.cpp
@@ -1064,6 +1064,8 @@ static inline QString toString(optLinkTimeCodeGenType option)
         break;
     case optLTCGEnabled:
         return "UseLinkTimeCodeGeneration";
+    case optLTCGIncremental:
+        return "UseFastLinkTimeCodeGeneration";
     case optLTCGInstrument:
         return "PGInstrument";
     case optLTCGOptimize:
